--- a/Day1/ex2.html
+++ b/Day1/ex2.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MyHTMLPage</title>
+    <title>Document</title>
 </head>
 <body>
-    <h1>This is my HTML page</h1>
+    <p>This</p>
+    <p>is</p>
+    <p>a</p>
+    <p>paragraph</p>
 </body>
 </html>
